style/style.css
/* ... */
.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: white;
    border-radius: 10px;
}

.bookbtn{
    background-color: #202133;
    font-family: 'Bebas Neue', cursive;
    font-size: 15px;
    padding: 5px 20px;
    color: #efefef;
    border: 2px solid #202133;
}

.home .container{
    padding-top: 100px;
}
.quote {
    color: #ffffff;
    font-family: 'Orbitron', sans-serif;
    margin-left: 100px;
    font-size: 70px;
    padding-top: 40px;
}

.quote .back{
    color: #ed1c24;
    text-shadow: 2px 2px #ffffff;
}

.quote .and{
    font-family: 'Odibee Sans', cursive;
}

.moon-bg img{
    position: absolute;
    transition: transform 3s ease-in;
    z-index: -2;
}

.playingMoon{
    transform: translateX(1050px);
}

.astronaut-bg{
    position: absolute;
    right: 10%;
    z-index: -1;
}

.astronaut-bg img{
    margin-top: 1400px;
    transition: transform 3s ease-in;   
}

.playingAstro{
    transform: translatey(-1400px);
}

/* .playingAstroFloat{
    animation: float 12s ease-in-out infinite;
} */

@keyframes float {
	0% {
		transform: translatey(0px);
	}
    50%{
        transform: rotateZ(10deg);
    }
	100% {
		transform: translatey(0px);
	}
}

.exploreBtn {
    background-color: Transparent;
    background-repeat:no-repeat;
    border: none;
    padding: 10px 10px;
    cursor:pointer;
    overflow: hidden;
    outline:none;
    color: #464f69;
    margin-top: 80px;
    font-size: 30px;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: lighter;
    margin-bottom: 120px;
}

.exploreBtn img{
    border-radius: 50px;
    border: 2px solid #282f42;
}

.exploreBtn:hover {
    background: #ed1c24;
    color: #ffffff;
    border: 2px solid #464f69;
    ;
}
/* header section ends */

/* Destination css starts*/

.destination{
    margin-bottom: 160px;
    padding-top: 90px;
}
.destination .destination-container .section-title{
    font-size: 60px;
    color: #ed1c24;
    font-family: 'Bebas Neue', cursive;
    text-decoration: overline;
    text-decoration-color: #ed1c24;
    margin-left: 160px;
    margin-bottom: 20px;
}

.image-container{
    margin-left: 150px;
    display: flex;
    flex-direction: row;
    z-index: 1;
}

.image-container figure{
    margin-left: 10px;
}

figcaption{
    font-family: 'Bebas Neue', cursive;
    font-size: 20px;
}

.marsG,.jupiterG, .moonG{
    width: 200px;
    height: 180px;
    cursor: pointer;
}

/*Moon Overview css starts*/

.moonOverview{
    margin-top: 100px;
}

.outside{
    color: #000000;
    font-size: 120px;
    font-family: 'Bebas Neue', cursive;
    margin-top: 140px;
    margin-left: 160px;
} 

.moonOverview .inside{
   position: absolute;
   width: 750px;
   height: 300px;
   margin-left: 40px;
   z-index: -1;
}

.moonOverview h2{
    color: #000000;
    font-size: 60px;
    font-family: 'Bebas Neue', cursive;
    margin-left: 160px;

}

.moonOverview p{
    color: #8b8b8b;
    font-size: 20px;
    font-family: 'Roboto Condensed', sans-serif;
    text-align: justify;
}

.moonDescription{
    display: flex;
    flex-direction: row;
    margin-left: 160px;
}

.moonDescription .p1,.p2{
    width: 500px;
}    

.moonDescription .p2{
    margin-left: 20px;
}

/*Moon Overview css end*/

/* Mars Overview css starts*/

.marsOverview{
    margin-top: -450px;
}

.outside{
    color: #000000;
    font-size: 80px;
    font-family: 'Bebas Neue', cursive;
    margin-top: 150px;
    margin-left: 160px;
} 

.marsOverview .inside{
   position: absolute;
   width: 770px;
   height: 300px;
   margin-left: 60px;
   z-index: -1;
}

.marsOverview h2{
    color: #000000;
    font-size: 40px;
    font-family: 'Bebas Neue', cursive;
    margin-left: 160px;

}

.marsOverview p{
    color: #8b8b8b;
    font-size: 20px;
    font-family: 'Roboto Condensed', sans-serif;
    text-align: justify;
}

.marsDescription{
    display: flex;
    flex-direction: row;
    margin-left: 160px;
}

.marsDescription .p1,.p2{
    width: 500px;
}    

.marsDescription .p2{
    margin-left: 20px;
}

/* Mars Overview css ends */

/*Jupiter Overview css starts*/

.jupiterOverview{
    margin-top: -420px;
}

.outside{
    color: #000000;
    font-size: 80px;
    font-family: 'Bebas Neue', cursive;
    margin-top: 170px;
    margin-left: 160px;
} 

.jupiterOverview .inside{
   position: absolute;
   width: 770px;
   height: 300px;
   margin-left: 60px;
   z-index: -1;
}

.jupiterOverview h2{
    color: #000000;
    font-size: 40px;
    font-family: 'Bebas Neue', cursive;
    margin-left: 160px;

}

.jupiterOverview p{
    color: #8b8b8b;
    font-size: 20px;
    font-family: 'Roboto Condensed', sans-serif;
    text-align: justify;
}

.jupiterDescription{
    display: flex;
    flex-direction: row;
    margin-left: 160px;
}

.jupiterDescription .p1,.p2{
    width: 500px;
}    

.jupiterDescription .p2{
    margin-left: 20px;
}

/*Jupiter Overview css ends*/

/* Destination css ends*/

/* activity css starts */

.activity{
    height: 100vh;
    background-image: url(../images/bg.png);
    clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 100%, 80% 90%, 49% 100%, 20% 90%, 0 100%, 0% 35%, 0 0);
}

.activity .section-title{
    font-size: 60px;
    color: #efefef;
    font-family: 'Bebas Neue', cursive;
    text-decoration: overline;
    text-decoration-color: #ed1c24;
    margin-left: 555px;
    padding-top: 100px;  
}

#activities-destination{
    text-decoration: overline;
    text-decoration-color: #ed1c24;
}

.activities-overview-1, .activities-overview-2{
    margin: 50px 230px;
    display: flex;
    flex-direction: row;
    /* justify-content: center; */
    color: #efefef;
    /* border: 2px solid #8b8b8b; */
}

.activities-overview-1 .landing-tour, .galactic-arcades,.space-bar{
    margin-left: 115px;
    border: 2px solid #202133;
    border-radius: 20px;
    background-color: #202133;
    padding: 20px 20px;
}
/* ... */

